[gd_scene load_steps=5 format=3 uid="uid://6xfka7adqenl"]

[ext_resource type="Script" path="res://map/audio_manager.gd" id="1_3kg6r"]
[ext_resource type="AudioStream" uid="uid://cmhgwgfbaj1w6" path="res://assets/sfx/hit1.mp3" id="2_ttl5e"]
[ext_resource type="AudioStream" uid="uid://dhhft53yqxfdy" path="res://assets/sfx/destroy1.mp3" id="3_e3fwa"]
[ext_resource type="AudioStream" uid="uid://cfveo0br1qv1d" path="res://assets/music/One Man Symphony - Collateral Damage (Free) - 06 Exploration Theme 01.mp3" id="4_fcu6f"]

[node name="AudioManager" type="Node2D"]
script = ExtResource("1_3kg6r")
default_hit_sfx = ExtResource("2_ttl5e")
default_destroy_sfx = ExtResource("3_e3fwa")

[node name="HitPlayer" type="AudioStreamPlayer2D" parent="."]

[node name="ResourceHitPlayer" type="AudioStreamPlayer2D" parent="."]

[node name="DestroyPlayer" type="AudioStreamPlayer2D" parent="."]

[node name="ResourceDestroyPlayer" type="AudioStreamPlayer2D" parent="."]
pitch_scale = 1.5

[node name="MusicPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_fcu6f")
volume_db = -8.0
autoplay = true
